--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/AndriiHrytsei/event-booster#readme",
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.8.3",
     "gh-pages": "^5.0.0",
     "parcel": "^2.8.3"
   }
