--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel src/index.html",
-    "build": "parcel build src/index.html",
+    "build": "parcel build src/*.html --public-url /event-booster/",
     "deploy": "rm -rf dist/ && npm run build && gh-pages -d dist"
   },
   "repository": {
