--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "event-booster",
   "version": "1.0.0",
   "description": "",
+  "homepage": "https://andriihrytsei.github.io/event-booster/",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel src/index.html",
@@ -18,7 +19,6 @@
   "bugs": {
     "url": "https://github.com/AndriiHrytsei/event-booster/issues"
   },
-  "homepage": "https://github.com/AndriiHrytsei/event-booster#readme",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.3",
     "gh-pages": "^5.0.0",
