--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.3",
-    "gh-pages": "^5.0.0",
     "parcel": "^2.8.3"
+  },
+  "dependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
